--- a/package.json
+++ b/package.json
@@ -2,10 +2,24 @@
   "name": "bag-of-holding",
   "version": "0.1.0",
   "private": true,
+  "main": "server/",
   "dependencies": {
+    "axios": "^0.19.0",
+    "bcrypt": "^3.0.6",
+    "dotenv": "^8.0.0",
+    "express": "^4.17.1",
+    "express-server": "^0.7.0",
+    "http-proxy-middleware": "^0.19.1",
+    "massive": "^5.11.2",
+    "node-sass": "^4.12.0",
+    "nodemon": "^1.19.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-redux": "^7.1.0",
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "3.0.1",
+    "react-toastify": "^5.3.2",
+    "redux": "^4.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
